--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "3.1.1",
+	"version": "3.2.0",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
+		"dev": "npm run start",
 		"start": "node scripts/alpha-build.js && electron .",
-		"dev": "node scripts/release-build.js && electron .",
+		"release": "node scripts/release-build.js && electron .",
 		"build": "npm run build:release",
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64",
 		"build:beta": "node scripts/beta-build.js && electron-builder --publish=never --x64",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64",
 		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json",
-		"build:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
+		"watch:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
 		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
 		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"lint": "eslint --fix .",
@@ -79,34 +80,34 @@
 	},
 	"dependencies": {
 		"@6c65726f79/custom-titlebar": "^0.9.1",
-		"@electron/remote": "^2.0.5",
+		"@electron/remote": "^2.0.8",
 		"@levminer/languages": "file:languages",
 		"@levminer/lib": "file:lib",
-		"@levminer/speakeasy": "^1.3.1",
+		"@levminer/speakeasy": "^1.4.0",
 		"auto-launch": "^5.0.5",
-		"axios": "^0.26.0",
+		"axios": "^0.26.1",
 		"bcryptjs": "^2.4.3",
 		"electron-context-menu": "^3.1.2",
 		"electron-debug": "^3.2.0",
-		"electron-updater": "^4.6.5",
+		"electron-updater": "^5.0.1",
 		"protons": "^2.0.3",
 		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.0",
-		"concurrently": "^7.0.0",
-		"electron": "^17.0.0",
-		"electron-builder": "^22.14.13",
-		"eslint": "^8.10.0",
+		"concurrently": "^7.1.0",
+		"electron": "^18.0.3",
+		"electron-builder": "^23.0.3",
+		"eslint": "^8.13.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"prettier": "^2.5.1",
+		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.8",
-		"sass": "^1.49.9",
+		"sass": "^1.50.0",
 		"tailwindcss": "^3.0.23"
 	},
 	"engines": {
