--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"watch:styles": "concurrently 'npm:watch:tw' 'npm:watch:gb'",
 		"watch:gb": "sass styles/global.scss styles/global.css --no-source-map --style compressed --watch",
 		"watch:tw": "tailwindcss build -i styles/tailwind.scss -o styles/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"test": "playwright test",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -89,15 +90,16 @@
 		"bcryptjs": "^2.4.3",
 		"electron-context-menu": "^3.1.2",
 		"electron-debug": "^3.2.0",
-		"electron-updater": "^5.0.4",
+		"electron-updater": "^5.0.1",
 		"protons": "^2.0.3",
 		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.21.1",
 		"@tailwindcss/forms": "^0.5.1",
 		"concurrently": "^7.1.0",
-		"electron": "^18.2.0",
+		"electron": "^18.2.3",
 		"electron-builder": "^23.0.9",
 		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -105,6 +107,7 @@
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
+		"playwright": "^1.21.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.10",
 		"sass": "^1.51.0",
