--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "authme",
 	"productName": "Authme",
-	"version": "3.3.1",
+	"version": "3.3.2",
 	"description": "Simple cross platform two-factor authentication app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -42,7 +42,7 @@
 			"license": "LICENSE.md",
 			"oneClick": false,
 			"allowToChangeInstallationDirectory": true,
-			"createDesktopShortcut": "always",
+			"createDesktopShortcut": true,
 			"artifactName": "authme-${version}-windows-x64-installer.exe"
 		},
 		"linux": {
@@ -88,9 +88,9 @@
 		"auto-launch": "^5.0.5",
 		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
-		"electron-context-menu": "^3.2.0",
+		"electron-context-menu": "^3.3.0",
 		"electron-debug": "^3.2.0",
-		"electron-updater": "^5.0.1",
+		"electron-updater": "^5.0.5",
 		"protons": "^2.0.3",
 		"qrcode-decoder": "^0.3.1",
 		"qrcode-generator": "^1.4.4"
@@ -98,18 +98,18 @@
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
 		"@tailwindcss/forms": "^0.5.2",
-		"concurrently": "^7.2.1",
-		"electron": "^19.0.4",
-		"electron-builder": "^23.0.3",
-		"eslint": "^8.17.0",
+		"concurrently": "^7.2.2",
+		"electron": "^19.0.8",
+		"electron-builder": "^23.1.0",
+		"eslint": "^8.19.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-tailwindcss": "^0.1.11",
-		"tailwindcss": "^3.1.2"
+		"prettier": "^2.7.1",
+		"prettier-plugin-tailwindcss": "^0.1.12",
+		"tailwindcss": "^3.1.5"
 	},
 	"engines": {
 		"node": ">=16.0.0",
